--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -1,4 +1,5 @@
 {% extends 'shop/basic.html' %}
+{% block title%} MyAwesomeCart - Best Ecommerce Website{% endblock %}
 {% block css %}
 .col-md-3
 {
@@ -7,6 +8,7 @@ margin-left:-4px;
 }
 .carousel-indicators .active {
 background-color: blue;
+
 }
 .col-md-3 img{
 width: 170px;
@@ -16,7 +18,12 @@ body .carousel-indicator li{
 background-color: blue;
 }
 body .carousel-indicators{
-bottom: 0;
+bottom: -40px;
+}
+.carousel-indicators li {
+
+
+    background-color: #7270fc;
 }
 body .carousel-control-prev-icon,
 body .carousel-control-next-icon{
@@ -29,7 +36,7 @@ bottom: auto;
 padding-top: 222px;
 }
 body .no-padding{
-padding-left: 0;
+padding-left: 0,
 padding-right: 0;
 }
 {% endblock %}
